EFTI-839: Configure ktlint into use